[tool.poetry]
name = "fake-zundamon-powered-by-openai"
version = "0.1.0"
description = ""
authors = ["nerikeshi-k <nerikeshik@gmail.com>"]
readme = "README.md"
packages = [{include = "fake-zundamon-powered-by-openai"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
